setting up integration of react and django

--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -34,6 +34,7 @@
           <li><a href="http://post.browndailyherald.com">POST</a></li>
           <li><a href="http://www.blogdailyherald.com">Blog</a></li>
       </ul>
+      {% block article %}{% endblock %}
     </div>
     </div>
 
