6693: React integrated with django, initial work on developing react components and urls pointing to article view (#5)
* building react frontend

* setting up integration of react and django

* React integrated with django, initial code for Article component in Article.js

--- a/newspaper/templates/articles.html
+++ b/newspaper/templates/articles.html
@@ -6,19 +6,11 @@
 
   <p>Welcome to <em>BDH</em> </p>
 
-<h2>Dynamic content</h2>
-
-  <p>The newspaper has the following record counts:</p>
-  <ul>
-    <li><strong>Articles:</strong> {{ num_articles }}</li>
-    <li><strong>Authors:</strong> {{ num_authors }}</li>
-  </ul>
-
 {% endblock %}
 
 {% block article %}
 
-	<div id='root'>
+	<div id='article-component' year={{year}} title={{title}}>
 	</div>
 		{% render_bundle 'main' %}
 
