--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -11,18 +11,32 @@
   
   <!-- Add additional CSS in static file -->
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/template-basic-styles.css' %}">
 </head>
 
 <body>
 
   <div class="container-fluid">
-
     <div class="row">
-      
-      <div class="col-sm-10 ">
-      {% block content %}{% endblock %}
-      </div>
+      <div id="centeredmenu">
+      <ul class="nav">
+          <li><a href="">ABOUT</a></li> 
+          <li><a href="">SUBMIT</a></li>
+          <li><a href="http://www.bdhsales.com" target="_blank">ADVERTISE</a></li>
+          <li><a href="http://www.heraldalumni.org/donate.html" target="_blank">DONATE</a></li>
+          <li><a href="">SUBSCRIBE</a></li>
+          <li><input type="text" placeholder="SEARCH"></li> <!-- Add event handler for enter -->
+          <li><a href="https://www.facebook.com/browndailyherald/"> <img src="/static/images/fb-logo.png"></a></li>
+          <li><a href="https://www.twitter.com/browndailyherald/"> <img src="/static/images/twitter-logo.png"></a></li>
+          <li><a href="https://www.instagram.com/browndailyherald/"> <img src="/static/images/insta-logo.png"></a></li>
+      </ul>
+    </div>
+  </div>
+  <div id= "header">
+    <a href="http://www.browndailyherald.com"><img src = "/static/images/bdh_flag.png"></a>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
       <div id="centeredmenu">
       <ul class="nav">
           <li><a href="{% url 'index' %}">Home</a></li>
@@ -34,10 +48,15 @@
           <li><a href="http://post.browndailyherald.com">POST</a></li>
           <li><a href="http://www.blogdailyherald.com">Blog</a></li>
       </ul>
-      {% block article %}{% endblock %}
     </div>
+    Ad goes here
+    {% block article %}{% endblock %} <!-- not necessarily article -->
     </div>
-
   </div>
+  <hr>
+  <footer>
+  amazing footer goes here
+  -Abstract out footer, other things as react components?
+  </footer>
 </body>
 </html>
