this is my commit message

--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -24,9 +24,6 @@
   </div>
   <div id="footerNew"></div>
 
-  Ad goes here
-  {% block article %}{% endblock %} <!-- not necessarily article -->
-
-  <hr>
+  {% block article %}{% endblock %} <!-- not necessarily article, could be something else -->
 </body>
 </html>
