minor changes to site prior to creation of staging branch

--- a/newspaper/templates/articles.html
+++ b/newspaper/templates/articles.html
@@ -2,9 +2,9 @@
 {% load render_bundle from webpack_loader %}
 
  {% block article %}
-
+<!-- 
 	<div id='article-component' year={{year}} title={{title}}>
-	</div>
+	</div> -->
 		{% render_bundle 'main' %}
 
 {% endblock %}
