--- a/frontend/src/general-style.css
+++ b/frontend/src/general-style.css
@@ -1,9 +1,9 @@
 /*============================================================================
   GENERAL ELEMENT STYLING
 ==============================================================================*/
-*, 
-input, 
-:before, 
+*,
+input,
+:before,
 :after {
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -21,7 +21,7 @@ input,
 	outline: 0;
 }
 
-html, 
+html,
 body {
   padding: 0;
   margin: 0;
@@ -40,9 +40,9 @@ a {
 }
 
 @media screen and (max-width: 767px) {
-	*, 
-	input, 
-	:before, 
+	*,
+	input,
+	:before,
 	:after {
 		font-size: 12px;
 		line-height: 18px;
@@ -136,7 +136,7 @@ a {
 	margin-bottom: 10px;
 }
 
-@media screen and (max-width: 767px) { 
+@media screen and (max-width: 767px) {
 	.large-nav-title {
 		font-size: 24px;
 	}
@@ -561,7 +561,7 @@ header a:hover {
 .section-features .med-nav-title {
 	margin-top: 0;
 }
-.section-features:nth-child(1), 
+.section-features:nth-child(1),
 .section-features:nth-child(4) {
 	flex-basis: calc(33% - 35px);
 	padding-left: 0;
@@ -583,4 +583,155 @@ header a:hover {
 }
 .section-features .section-featured-articles > div:last-child {
 	border-bottom: none;
+}
+
+/*============================================================================
+  NonSports
+==============================================================================*/
+
+.nonsports-column {
+	display: inherit;
+	flex-wrap: wrap;
+	flex-basis: 33%;
+	flex-grow: 1;
+	padding: 20px;
+	padding-bottom: 0px;
+	padding-top: 0px;
+	font-family: 'Avenir Medium', sans-serif;
+	overflow: hidden;
+	flex-basis: calc(33% - 35px);
+	width: 878px;
+	border-bottom: 1px solid #c4c4c4;
+}
+
+.nonsports-column .content{
+	font-weight: 700;
+	font-size: 30px;
+	margin-bottom: 25px;
+	margin-top: 25px;
+}
+
+.nonsports-column .content .section-header{
+	font-family: 'Avenir Medium', sans-serif;
+	font-weight: 400;
+	font-size: 12px;
+	text-transform: uppercase;
+	color: #ef2c34;
+	margin-bottom: 10px;
+}
+
+.nonsports-column .content .blank-section-header{
+	margin-bottom: 10px;
+}
+
+.nonsports-column .content .meta{
+	margin-left: 40px;
+}
+
+.nonsports-column .content .title{
+	font-weight: 700;
+	font-size: 30px;
+	margin-bottom: 10px;
+}
+
+.nonsports-column .content .author{
+	font-style: italic;
+	color: #999;
+	font-weight: 300;
+}
+
+.nonsports-column .content .date{
+	color: #999;
+	font-weight: 300;
+}
+
+.nonsports-column .image img {
+	width: 100%;
+	height: 160px;
+	object-fit: cover;
+	object-position: absolute;
+	margin-bottom: 23px;
+	margin-top: 23px;
+	float: left;
+}
+
+.nonsports-column .image{
+	float: left;
+	margin-right: 30px;
+}
+
+.nonsports-column .content .description{
+	font-size: 14px;
+	line-height: 24px;
+	color: 414141;
+	font-weight: 300;
+}
+
+/*============================================================================
+  Author_Info
+==============================================================================*/
+
+.authorInfo {
+	display: inherit;
+	flex-wrap: wrap;
+	flex-basis: 33%;
+	flex-grow: 1;
+	padding: 20px;
+	padding-bottom: 0px;
+	padding-top: 0px;
+	font-family: 'Avenir Medium', sans-serif;
+	overflow: hidden;
+	flex-basis: calc(33% - 35px);
+	width: 878px;
+}
+
+.authorInfo .profile{
+	font-weight: 700;
+	font-size: 30px;
+	margin-bottom: 15px;
+	margin-top: 15px;
+	border-bottom: 1px solid #c4c4c4;
+}
+
+.authorInfo .profile .titlePosition{
+	font-family: 'Avenir Medium', sans-serif;
+	font-weight: 100;
+	font-size: 25px;
+	text-transform: uppercase;
+	margin-bottom: 40px;
+	margin-top: 15px;
+	padding-bottom: 10px;
+}
+
+.authorInfo .profile .name{
+	font-weight: 700;
+	font-size: 30px;
+	margin-bottom: 10px;
+	margin-top: 15px;
+	padding-top: 15px;
+}
+
+.authorInfo .profile .image img {
+	width: 75%;
+	height: 110px;
+	object-fit: cover;
+	float: left;
+	border-radius: 80%;
+}
+
+.authorInfo .profile .image{
+	float: left;
+	max-width: 150px;
+}
+
+.authorInfo .profile-description{
+	border-bottom: 1px solid #c4c4c4;
+}
+
+.authorInfo .description{
+	font-size: 10px;
+	line-height: 24px;
+	color: 414141;
+	font-weight: 300;
+	padding-bottom: 10px;
 }
