--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-7889946-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-7889946-1');
+  </script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
   <!-- Add additional CSS in static file -->
@@ -30,6 +39,7 @@
       </div>
       <div id="sidebar" class="main-sidebar"></div>
     </div>
+    <div class="top-ad" id="728x90f"></div> <!-- Footer ad-->
   </div>
   <div id="footerNew" class="main-footer"></div>
 
