added js AJAX wrappers and error placeholders

--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -32,7 +32,9 @@
 
     <div class="main-page">
       <div class="main-content">
-    
+        <div id="content">
+          {% block content %} {% endblock %}
+        </div>
         <div id="hero"></div>
         <div id="section"></div>
 
