--- a/frontend/src/general-style.css
+++ b/frontend/src/general-style.css
@@ -789,6 +789,8 @@ header a:hover {
 	object-fit: cover;
 	object-position: center;
 	margin-bottom: 5px;
+}
+
 /*desktop*/
 @media screen and (min-width: 768px) {
 	.index_sections {
