template cleanup and refactoring

--- a/newspaper/templates/401.html
+++ b/newspaper/templates/401.html
@@ -2,6 +2,5 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-	<div id="hero"></div>
-	<div id="section"></div>
+  <h1>Unauthorized Access Placeholder</h1>
 {% endblock %}
