--- a/frontend/src/general-style.css
+++ b/frontend/src/general-style.css
@@ -981,7 +981,7 @@ header a:hover {
 	font-family: 'Avenir Medium', sans-serif;
 	overflow: hidden;
 	flex-basis: calc(33% - 35px);
-	width: 878px;
+	max-width: 860px;
 }
 
 .authorInfo .profile{
@@ -1000,6 +1000,7 @@ header a:hover {
 	margin-bottom: 40px;
 	margin-top: 15px;
 	padding-bottom: 10px;
+	line-height: 27px;
 }
 
 .authorInfo .profile .name{
@@ -1008,6 +1009,7 @@ header a:hover {
 	margin-bottom: 10px;
 	margin-top: 15px;
 	padding-top: 15px;
+	line-height: 33px;
 }
 
 .authorInfo .profile .image img {
