Start of templates, modifications for deployment

--- a/newspaper/templates/401.html
+++ b/newspaper/templates/401.html
@@ -2,5 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-  <h1>Unauthorized Access Placeholder</h1>
+  <h1>Unfortunately, we can't let you access that page - but here's some recent news you could take a look at instead!</h1>
+  <a href="http://www.browndailyherald.com/"> newspaper </a>
+  <h3>Thank you for reading!</h3>
 {% endblock %}
