--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
   
-  {% block title %}<title>The Brown Daily Herald</title>{% endblock %}
+  <title>The Brown Daily Herald</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,7 +20,6 @@
     gtag('config', 'UA-7889946-1');
   </script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
   <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/template-basic-styles.css' %}">
@@ -29,9 +28,7 @@
 <body>
   <div id="headerNew"></div>
   <div class="main-container">
-    
     <div class="top-ad" id="728x90"></div>
-
     <div class="main-page">
       <div class="main-content">
         <div id="content">
