--- a/newspaper/templates/500.html
+++ b/newspaper/templates/500.html
@@ -2,5 +2,6 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-  <h1>Internal Server Error Placeholder</h1>
+  <h1>Something went wrong on our end. We're working on it, and sorry for the inconvenience!</h1>
+  <h3>Thank you for reading.</h3>
 {% endblock %}
