--- a/newspaper/templates/401.html
+++ b/newspaper/templates/401.html
@@ -2,7 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-  <h1>Unfortunately, we can't let you access that page - but here's some recent news you could take a look at instead!</h1>
-  <a href="http://www.browndailyherald.com/"> newspaper </a>
+  <h1>401: Unauthorized Access</h1>
+  <h3> Unfortunately, we can't let you access that page - but <a href="http://www.browndailyherald.com/">here's</a> some recent news you could take a look at instead!</h3>
   <h3>Thank you for reading!</h3>
 {% endblock %}
