--- a/newspaper/templates/404.html
+++ b/newspaper/templates/404.html
@@ -2,6 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-  <h1>We can't seem to find the page you're looking for. Sorry for the inconvenience!</h1>
-  <h3>Thank you for reading</h3>
+  <h1>404: Page Not Found</h1>
+  <h3>We can't seem to find the page you're looking for. Sorry for the inconvenience!</h1>
+  <h3>Thank you for reading.</h3>
 {% endblock %}
