--- a/newspaper/templates/500.html
+++ b/newspaper/templates/500.html
@@ -2,6 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-  <h1>Something went wrong on our end. We're working on it, and sorry for the inconvenience!</h1>
+  <h1>500: Internal Server Error</h1>
+  <h3>Something went wrong on our end. We're working on it, and sorry for the inconvenience!</h3>
   <h3>Thank you for reading.</h3>
 {% endblock %}
