--- a/newspaper/templates/print_subscriptions.html
+++ b/newspaper/templates/print_subscriptions.html
@@ -2,8 +2,9 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-  <h1>Print Subscriptions</h1>
-  For inquiries regarding daily print subscriptions for the newspaper, please contact us at subscriptions@browndailyherald.com. <br>
-  Semester subscription: $100<br>
-  Academic year subscription: $200
+<h1>Print Subscriptions</h1>
+For inquiries regarding daily print subscriptions for the newspaper, please contact us at
+subscriptions@browndailyherald.com. <br>
+Semester subscription: $100<br>
+Academic year subscription: $200
 {% endblock %}
