Cleaned up previously removed components, integrated Disqus

--- a/newspaper/templates/staff_list.html
+++ b/newspaper/templates/staff_list.html
@@ -51,7 +51,7 @@
         <p>Head Photo Editor: Sam Berube, Anita Sheih</p>
         <p>Illustrations Editor: Daphne Zhao</p>
         <p>Copy Desk Chief: Kelley Tackett</p>
-        <p>Head Web Developer: Rahul Jayaraman</p>
+        <p>Director of Web Development: Rahul Jayaraman</p>
     </div>
     <div class="business-staff-block">
         <h3>BUSINESS</h3>
