Issuu working, blocked graphQL from being accessed by the end user

--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  
+  <script type="text/javascript" src="https://e.issuu.com/embed.js" async={true}></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-7889946-1"></script>
   <script>
