--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -34,12 +34,12 @@
       <div class="main-content">
     
         <div id="hero"></div>
+        <div class="bot-ad" id="728x90f"></div> <!-- 728x90 ad -->
         <div id="section"></div>
 
       </div>
       <div id="sidebar" class="main-sidebar"></div>
     </div>
-    <div class="top-ad" id="728x90f"></div> <!-- Footer ad-->
   </div>
   <div id="footerNew" class="main-footer"></div>
 
