--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -32,13 +32,13 @@
     <div class="top-ad" id="728x90"></div>
     <div class="main-page">
       <div class="main-content">
-        <div id="content">
-          {% block content %} {% endblock %}
-        </div>
+   
+        <div id="hero"></div>
+        <div class="bot-ad" id="728x90f"></div> <!-- 728x90 ad -->
+        <div id="section"></div>
       </div>
       <div id="sidebar" class="main-sidebar"></div>
     </div>
-    <div class="top-ad" id="728x90f"></div> <!-- Footer ad-->
   </div>
   <div id="footerNew" class="main-footer"></div>
   {% render_bundle 'main' %}
