Start of Form Pages + Proper Static Page Links

--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -32,10 +32,7 @@
     <div class="top-ad" id="728x90"></div>
     <div class="main-page">
       <div class="main-content">
-   
-        <div id="hero"></div>
-        <div class="bot-ad" id="728x90f"></div> <!-- 728x90 ad -->
-        <div id="section"></div>
+        {% block content %}{% endblock %}
       </div>
       <div id="sidebar" class="main-sidebar"></div>
     </div>
