--- a/newspaper/templates/find_paper.html
+++ b/newspaper/templates/find_paper.html
@@ -4,6 +4,6 @@
 {% block content %}
 <h1>Find a copy of the Brown Daily Herald</h1>
 You can pick up a copy of The Herald for free at any of the locations on this map.
-Locations in red are "hot spots" which have at least 100 papers delivered each day.
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1IY05x3zcOXPKZDTcg-SNCUxuutxw1FEF&msa=0&ie=UTF8&t=m&vpsrc=6&ll=41.824229%2C-71.39834400000001&spn=0.025584%2C0.025749&z=15&source=embed"></iframe>
+Locations in red are "hot spots" which have at least 100 papers delivered each day.<br><br>
+<iframe width=700 height=600 src="https://www.google.com/maps/d/u/0/embed?mid=1IY05x3zcOXPKZDTcg-SNCUxuutxw1FEF&msa=0&ie=UTF8&t=m&vpsrc=6&ll=41.824229%2C-71.39834400000001&spn=0.025584%2C0.025749&z=15&source=embed"></iframe>
 {% endblock %}
