staff list updates and the start of react-router integration

--- a/newspaper/static/css/template-basic-styles.css
+++ b/newspaper/static/css/template-basic-styles.css
@@ -126,3 +126,9 @@
     font-size: 16px;
     margin: 8px 0px;
 }
+
+.previous-staff-lists-block {
+  width: 100%;
+  text-align: left;
+  display: inline-block;
+}
