--- a/newspaper/templates/section.html
+++ b/newspaper/templates/section.html
@@ -2,5 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-	Section Content!
+	<div id="section-features"></div>
+	<div id="bot-ad" id="728x90f"></div>
+	<div id="nonsports"></div>
 {% endblock %}
