Revert "React-Router Integrations Part 1 (#37)"
This reverts commit 64d8a757bfb0d77e23dafab0830e08f992aaf137.

--- a/newspaper/templates/newspaper/authors_page.html
+++ b/newspaper/templates/newspaper/authors_page.html
@@ -1,7 +1,13 @@
 {% extends "base_generic.html" %}
 {% load render_bundle from webpack_loader %}
-{% load wagtailcore_tags %}
 
-{% block content %}
-	<div id='authorInfo'></div>
+ {% block article %}
+
+ {% load wagtailcore_tags %}
+
+{{ page.body|richtext }}
+	<div id='author-component'>
+	</div>
+		{% render_bundle 'main' %}
+
 {% endblock %}
