--- a/newspaper/templates/section.html
+++ b/newspaper/templates/section.html
@@ -2,7 +2,5 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-	<div id="section-features"></div>
-	<div id="bot-ad" id="728x90f"></div>
-	<div id="nonsports"></div>
+	Section Content!
 {% endblock %}
