--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -31,7 +31,7 @@
   <div class="main-container">
     <div class="top-ad" id="728x90"></div>
     <div class="main-page">
-      <div id='main-content'>
+      <div class="main-content">
         {% block content %}{% endblock %}
       </div>
       <div id="sidebar" class="main-sidebar"></div>
