reverted staff list to upstream

--- a/newspaper/templates/staff_list.html
+++ b/newspaper/templates/staff_list.html
@@ -52,9 +52,7 @@
         <p>Illustrations Editor: Daphne Zhao</p>
         <p>Copy Desk Chief: Kelley Tackett</p>
         <p>Director of Web Development: Rahul Jayaraman</p>
-    </div>    path('api/graphiql/', views.error_401),
-    path('api/graphiql/', views.error_401),
-
+    </div>
     <div class="business-staff-block">
         <h3>BUSINESS</h3>
         <p>General Managers: Michael Borrello, Matilda Lynton</p>
