--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -64,7 +64,8 @@ single_article default styles
 .single-article {
   display: flex;
   flex-direction: column;
-  margin-left: 90px
+  margin-left: 45px;
+  margin-right: 45px;
 
 }
 .single-article-header {
@@ -125,11 +126,16 @@ single_article default styles
 }
 .single-article-body {
   margin-top: 40px;
-  margin-right: 60px;
 }
 .single-article-body p {
-  font-size: 20px;
+  font-size: 17px;
   font-family: Georgia;
+}
+
+.single-article-body a {
+  font-size: 17px;
+  font-family: Georgia;
+  color:maroon;
 }
 
 
@@ -154,7 +160,7 @@ single_article default styles
   align-items: center;
   height: 45px
 }
-.single-article-share a {
+.single-article-share p {
   font-size: 13px;
   color:  #999;
   margin-top: 5px;
@@ -178,7 +184,8 @@ single_article default styles
 }
 
 .single-article-comments {
-  margin-top: 30px
+  margin-top: 30px;
+  margin-right: 15px
 }
 .single-article-comments-text {
   font-size: 20px;
