--- a/newspaper/templates/base_generic.html
+++ b/newspaper/templates/base_generic.html
@@ -32,7 +32,10 @@
     <div class="top-ad" id="728x90"></div>
     <div class="main-page">
       <div id='main-content'>
-        {% block content %}{% endblock %}
+        {% block content %}
+
+
+        {% endblock %}
       </div>
       <div id="sidebar" class="main-sidebar"></div>
     </div>
