--- a/newspaper/templates/articles.html
+++ b/newspaper/templates/articles.html
@@ -7,48 +7,48 @@
 {% set_disqus_identifier object.id %}
 
 {% block content %}
-	<div id="article-component"></div>
-	<script>
-	    /**
-	     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT 
-	     *  THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR 
-	     *  PLATFORM OR CMS.
-	     *  
-	     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: 
-	     *  https://disqus.com/admin/universalcode/#configuration-variables
-	     */
-	    /*
-	    var disqus_config = function () {
-	        // Replace PAGE_URL with your page's canonical URL variable
-	        this.page.url = PAGE_URL;  
-	        
-	        // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-	        this.page.identifier = PAGE_IDENTIFIER; 
-	    };
-	    */
+<div id="article-component"></div>
+<script>
+	/**
+	 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT 
+	 *  THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR 
+	 *  PLATFORM OR CMS.
+	 *  
+	 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: 
+	 *  https://disqus.com/admin/universalcode/#configuration-variables
+	 */
+	/*
+	var disqus_config = function () {
+		// Replace PAGE_URL with your page's canonical URL variable
+		this.page.url = PAGE_URL;  
 	    
-	    (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
-	        var d = document, s = d.createElement('script');
-	        
-	        // IMPORTANT: Replace EXAMPLE with your forum shortname!
-	        s.src = 'https://browndailyherald.disqus.com/embed.js';
-	        
-	        s.setAttribute('data-timestamp', +new Date());
-	        (d.head || d.body).appendChild(s);
-	    })();
-	</script>
-	<noscript>
-	    Please enable JavaScript to view the 
-	    <a href="https://disqus.com/?ref_noscript" rel="nofollow">
-	        comments powered by Disqus.
-	    </a>
-	</noscript>
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2';
-	  fjs.parentNode.insertBefore(js, fjs);
+		// Replace PAGE_IDENTIFIER with your page's unique identifier variable
+		this.page.identifier = PAGE_IDENTIFIER; 
+	};
+	*/
+
+	(function () {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
+		var d = document, s = d.createElement('script');
+
+		// IMPORTANT: Replace EXAMPLE with your forum shortname!
+		s.src = 'https://browndailyherald.disqus.com/embed.js';
+		s.async = true
+		s.setAttribute('data-timestamp', +new Date());
+		(d.head || d.body).appendChild(s);
+	})();
+</script>
+<noscript>
+	Please enable JavaScript to view the
+	<a href="https://disqus.com/?ref_noscript" rel="nofollow">
+		comments powered by Disqus.
+	</a>
+</noscript>
+<div id="fb-root"></div>
+<script>(function (d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2';
+		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 {% endblock %}
