--- a/frontend/src/general-style.css
+++ b/frontend/src/general-style.css
@@ -306,7 +306,7 @@
 	}
 	.fill img {
 	    flex-shrink: 0;
-	    min-width: 100%;
+	    min-width: 600px;
 	    height: 450px;
 	    object-fit: cover;
 	}
